dark mode bg fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@
     --color-text-muted:#c7d2fe;
     --color-fill:#ff7700;
     --color-dark:#000000;
+    --color-bgdark:#111827;
     --color-button-accent:#ffffff;
     --color-button-accent-hover:#eef2ff;
     --color-button-muted:#ff7700;
